--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "mongodb": "^5.5.0",
     "mongoose": "^5.10.14",
     "next": "10.0.1",
     "randomcolor": "^0.6.2",
